--- a/libbodycontroller/CMakeLists.txt
+++ b/libbodycontroller/CMakeLists.txt
@@ -29,6 +29,8 @@ include_directories(
   ${Boost_INCLUDE_DIRS}
   ${CMAKE_BINARY_DIR}
   ${CMAKE_CURRENT_BINARY_DIR}
+  ${OPENGL_INCLUDE_DIRS}
+  ${GLUT_INCLUDE_DIRS}
   )
 
 
